objects/TASKRAY_LTNG__trLTNGGlobalSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TASKRAY_LTNG__trLTNG_ProjectComponentFilterId__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY_LTNG__trLTNG_navigateToStandardUI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY_LTNG__trLTNG_useFullFeedChatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>trLTNG_ProjectComponentFilterId__c</label>
        <type>Checkbox</type>
    </fields>
    <label>TaskRay Component Global Settings</label>
</CustomObject>